# StockTrace

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  application.yml.example  architecture.md  data-flow.md  docker-compose.yml  pyproject.toml  requirements.txt  scaling-strategy.md
.github/workflows/: ci.yml
docs/: deployment-guide.md  financial-analysis-engine.md  macos-m2-deployment.md  official-data-source-map.md  phase-0-foundation.md  project-structure.md  telegram-bot-setup.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0002_create_watchlist_items.py  0003_create_financial_tables.py  0004_create_trace_engine_tables.py
scripts/: init_db.py
src/: .env.example  requirements.txt
src/stocktrace/: __init__.py  main.py
src/stocktrace/ai/: __init__.py  analysis_service.py  financial_models.py  financial_prompt_builder.py  market_prompt_builder.py  models.py  prompt_builder.py  serialization.py  translation_service.py
src/stocktrace/api/: __init__.py  app.py  dependencies.py
src/stocktrace/bootstrap/: container.py
tests/: conftest.py
tests/integration/: test_app_lifecycle.py  test_financial_api.py  test_health_api.py  test_security_api.py  test_watchlist_repository.py
tests/unit/: test_ai_module.py  test_ai_provider_factory.py  test_analysis_formatters.py  test_analysis_services.py  test_config.py  test_financial_analysis_service.py  test_financial_data_quality.py  test_financial_period.py  test_financial_ratio_engine.py  test_financial_scoring_engine.py  test_financial_valuation_engine.py  test_infrastructure_helpers.py  test_market_analysis_formatter.py  test_market_analysis_job.py  test_market_analysis_service.py  test_market_command.py  test_market_data_service.py  test_market_hours.py  test_market_prompt_builder.py  test_news_quality.py  test_policy_news_analysis.py  test_scheduler_service.py  test_security_middleware.py  test_stock_analysis_job.py  test_stock_api.py  test_stock_query_handlers.py  test_technical_analysis_service.py  test_telegram_authorization.py  test_telegram_delivery.py  test_telegram_messages.py  test_telegram_runner.py  test_trace_api.py  test_trace_scoring_engine.py  test_trace_source_catalog.py  test_watchlist_service.py  test_yahoo_providers.py
(+145 files in other folders)
