[project]
name = "stocktrace"
version = "0.1.0"
description = "Enterprise-level async stock monitoring platform controlled through Telegram."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "StockTrace Team" }
]
dependencies = [
  "aiogram>=3.5.0",
  "aiolimiter>=1.1.0",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.0",
  "apscheduler>=3.10.4",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "prometheus-client>=0.20.0",
  "python-dotenv>=1.0.1",
  "redis>=5.0.4",
  "sqlalchemy[asyncio]>=2.0.30",
  "structlog>=24.1.0",
  "tenacity>=8.3.0",
  "uvicorn[standard]>=0.29.0",
  "vnstock>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.1",
  "ruff>=0.4.4"
]

[project.scripts]
stocktrace-api = "stocktrace.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "A",
  "ASYNC",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PL",
  "RUF",
  "S",
  "SIM",
  "UP",
  "W"
]
ignore = [
  "S101",
  "PLR0913"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
  "apscheduler.*",
  "feedparser.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=stocktrace",
  "--cov-report=term-missing",
  "--cov-fail-under=80"
]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: tests that require external services or database containers"
]

[tool.coverage.run]
branch = true
source = ["stocktrace"]

[tool.coverage.report]
show_missing = true
skip_covered = true
